# revdep-scanner

./: CHANGELOG.md  README.md  cabal.project  revdep-scanner.cabal
